# scene-recognition

./: .gitignore  CMakeLists.txt  PRJ3 Report.docx  PRJ3 Report.pages  PRJ34-S008284-S010097.cpp  contributors.txt  results.docx
include/: BagOfSIFT.h  Evaluator.h  ImageReader.h  KNNTest.h  SVMAnalysis.h  TinyImages.h
src/: BagOfSIFT.cpp  Evaluator.cpp  ImageReader.cpp  KNNTest.cpp  SVMAnalysis.cpp  TinyImages.cpp
